syntax = "proto3";

package kvstore;

option java_multiple_files = true;
option java_package = "org.raft.kvstore.rpc";
option java_outer_classname = "KVStoreProto";

import "raft_service.proto";

message ClientRequest {
  enum CommandType {
    PING = 0;
    GET = 1;
    SET = 2;
    STRLEN = 3;
    DEL = 4;
    APPEND = 5;
  };

  CommandType type = 1;
  optional string key = 2;
  optional string value = 3;
}

message ClientResponse {
  string result = 1;
  bool success = 2;
  string leaderAddress = 3;
}

message RequestLogArgs {}

message RequestLogReply {
  repeated raft.LogEntry logs = 1;
  bool success = 2;
  string leaderAddress = 3;
}

message MemberChangeArgs {
  enum ChangeType {
    ADD = 0;
    REMOVE = 1;
  }
  ChangeType type = 1;
  string nodeId = 2;
  optional string nodeAddress = 3;
}

message MemberChangeReply {
  bool success = 1;
  string error_message = 2;
}

service KVStoreService {
  rpc ExecuteCommand(ClientRequest) returns (ClientResponse);
  rpc RequestLog(RequestLogArgs) returns (RequestLogReply);
  rpc ChangeMembership(MemberChangeArgs) returns (MemberChangeReply);
}
